# chromic-engine

./: .gitignore  LICENSE  README.md  _fix_emojis.py  fill-lyrics.js  index.js  package-lock.json  package.json  test-merge-3tracks.js  test-search.js  test-timed-merge-v2.js  test-timed-merge.js  test-whisper-raw.js
audio-visualizer/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
chromic-lyrics/: README.md  chromic-gpu-panel.js  convert-lyrics-to-gpu.js  gpu-deps-entry.js
docs/: AI_SETUP.md  ARCHITECTURE.md  PORTFOLIO.md  SHORTCUTS.md  ai-lyrics-pipeline.md  bugFixesIdea1.md  dom-lyrics-animation.md  generalIdea1.md  ghost-morph-animation-snapshot.md  gold-training-guide.md  gpu-lyrics-animation.md  gpu-lyrics-panel-snapshot.md  gpu-text-styles-snapshot.md  lyrics-aligner.md  lyrics-renderer-troica-snapshot.md  mood-color-palette.md  music-pipeline.md  pluginIdea1.md  pro-mode-editing.md  text-animation-systems.md  themes-design-system.md  waveform-canvas.md  word-types-snapshot.md
electron/: main.js  menu.js  preload.js
lyrics-engine/: ALIGNER_CHANGES_2026-06-08.md  README.md  aligner.py  aligner_output.json  analyze_output.py  batch_align.py  check2.py  check_deadbeat.py  check_flags.py  check_output.py  check_quality.py  check_quality_all.py  check_sidecar.py  compare_lrc.py  debug_match.py  out.json  out2.json  out3.json  out_turbo.json  repair_sidecars.py  requirements.txt  run_test_all.py  test1_stdout.json  test_adlib_detection.py  test_albums.py  test_artists.py  (+10 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
(+218 files in other folders)
