[package]
name = "chromic-engine"
version = "1.0.0"
description = "Chromic Engine — High-Fidelity Music Player"
authors = ["Chromic"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
walkdir = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
tiny_http = "0.12.0"
